# photoflow

./: .gitignore  LICENSE  PLAN.md  README.md  app.py  catalog.py  decode.py  desktopintegration.py  editstack.py  export.py  models.py  photoflow.spec  pyproject.toml  render.py  styles.py  theme.py  version.py  workers.py
.github/workflows/: build.yml  windows-build.yml
scripts/: make_deb.py  make_icns.py  make_ico.py
shaders/: adjust.frag
tests/: smoke_gui.py  verify_headless.py  verify_shader.py
tools/: ambiance_calib.py
views/: compare.py  exportdialog.py  foldertree.py  grid.py  helpdialog.py  settingsdialog.py  stackpanel.py  viewer.py
