[project]
name = "photoflow"
version = "0.1.0"
description = "Fast native Linux app for JPEG browsing, culling, and non-destructive editing"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "PyTurboJPEG>=1.7,<2",  # 2.x requires libjpeg-turbo 3; system has 2.1.5
    "pyexiv2>=2.12",
    "numpy>=1.26",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
