[project]
# version is the single source of truth: the app shows it (version.py) and
# the build workflow refuses release tags that don't match it.
name = "photoflow"
version = "0.4.0"
description = "Fast native app (Linux/Windows/macOS) for JPEG/PNG browsing, culling, and non-destructive editing"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "PyTurboJPEG>=1.7,<2", # 2.x requires libjpeg-turbo 3; system has 2.1.5
    "pyexiv2>=2.12",
    "numpy>=1.26",
    "rawpy>=0.27.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
